se agrego archivo que faltaba para deployar

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "promociones-203414"
+    "default": "promociones-203414",
+    "promociones": "promociones-203414"
   }
 }
