--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "firebase-admin": "~5.12.0",
     "firebase-functions": "^1.0.1"
   },
